# antigravity-sdk-rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
docs/: agent.md  connections.md  conversation.md  hooks.md  mcp.md  tools.md  triggers.md
examples/: README.md  custom_tools.rs  hello_world.rs  persistence.rs  policies.rs  streaming.rs  structured_output.rs  subagents.rs
examples/agent_server/: Cargo.toml  README.md
examples/agent_server/rust_async_learning/: Cargo.toml
examples/agent_server/src/: main.rs
examples/leptos_axum/: Cargo.toml  input.css
examples/leptos_axum/src/: app.rs  lib.rs  main.rs  types.rs
examples/leptos_ssr_axum/: Cargo.toml  README.md  build.rs  index.html  input.css  spin.toml
examples/leptos_ssr_axum/src/: app.rs  lib.rs  main.rs  server.rs  types.rs
examples/leptos_wasm_test/: Cargo.toml  Trunk.toml  index.html
examples/leptos_wasm_test/src/: lib.rs
proto/: localharness.proto
scripts/: bump-version  bump-version.py  bump-version.rs  install_harness.sh  setup-hooks.sh
skills/google-antigravity-sdk-rust/: SKILL.md  plugin.json
skills/google-antigravity-sdk-rust/examples/: custom_tools.md  hello_world.md  persistence.md  policies.md  streaming.md  structured_output.md  subagents.md
skills/google-antigravity-sdk-rust/examples/getting_started/: agent_skills.md  app_data_dir_override.md  custom_tool.md  hello_world.md  hooks.md  mcp_tools.md  multimodal.md  periodic_trigger.md  persistence.md  persona_config.md  policies.md  streaming.md  structured_output.md  subagents.md
skills/google-antigravity-sdk-rust/references/: agent_configuration.md  architecture.md  built_in_tools.md  error_handling.md  mcp_integration.md  observability.md  safety_policies.md
src/: agent.rs  connection.rs  context.rs  conversation.rs  direct.rs  error.rs  hooks.rs  interactive.rs  lib.rs  local.rs  policy.rs  tool_context.rs  tools.rs  trigger_helpers.rs  triggers.rs  types.rs  wasm.rs
tests/: documentation_examples.rs  integration_tests.rs  mock_localharness.py
