[package]
name = "antigravity-sdk-rust"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "Rust SDK for Google Antigravity and Gemini to build autonomous, stateful, and secure AI agents"
repository = "https://github.com/codeitlikemiley/antigravity-sdk-rust"
homepage = "https://github.com/codeitlikemiley/antigravity-sdk-rust"
documentation = "https://docs.rs/antigravity-sdk-rust"
readme = "README.md"

[dependencies]
prost = "0.12"
pbjson = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
dotenvy = "0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }
any_spawner = { version = "0.3.0", features = ["futures-executor"] }
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }


[build-dependencies]
prost-build = "0.12"
pbjson-build = "0.6"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
# Enforce correctness and styles (groups need priority set to allow overrides)
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -3 }

# Prevent panics and placeholders in production
unwrap_used = "deny"
expect_used = "deny"
todo = "warn"
panic = "deny"

# Allow specific pedantic lints that are too verbose / restrictive
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
return_self_not_must_use = "allow"
uninlined_format_args = "allow"
# Let type_complexity slide where generated proto bindings or complex callbacks dictate it
type_complexity = "allow"


