[package]
name = "agent_server"
version = "0.1.0"
edition = "2021"
description = "HTTP sidecar server wrapping the full antigravity-sdk-rust Agent for Spin/WASI access"

[[bin]]
name = "agent_server"
path = "src/main.rs"

[dependencies]
antigravity-sdk-rust = { path = "../.." }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures-util = "0.3"
anyhow = "1"
