[package]
name = "leptos_ssr_axum"
version = "0.1.0"
authors = ["codeitlikemiley <codeitlikemiley@gmail.com>"]
description = "Antigravity SDK Spin WASI Example"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
any_spawner = { version = "0.3.0", features = ["futures-executor"] }
console_error_panic_hook = "0.1"
leptos = { version = "0.8.9" }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# SDK is compiled on both client (unused) and server (wasm32)
antigravity-sdk-rust = { path = "../.." }

# WASM WebSocket and TCP client
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }

# SSR/WASI specific dependencies
leptos_wasi = { git = "https://github.com/codeitlikemiley/leptos_wasi", optional = true }
spin-sdk = { version = "5", optional = true }
wasi = { version = "=0.13.1", optional = true }
wasm-bindgen = { version = "=0.2.103", optional = true }
web-sys = { version = "0.3", features = ["Storage", "Window"], optional = true }

[workspace]

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen", "dep:web-sys"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/spin",
  "dep:spin-sdk",
  "dep:leptos_wasi",
  "dep:wasi",
]

[package.metadata.leptos]
output-name = "leptos_ssr_axum"
tailwind-input-file = "input.css"
assets-dir = "public"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
