[package]
name = "leptos_wasm_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
antigravity-sdk-rust = { path = "../.." }
